k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gatus-service
spec:
  selector:
    app: gatus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
