k8s/nginix-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gatus
spec:
  rules:
  - host: eks.romeoesty.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatus-service
            port:
              number: 8080
  ingressClassName: nginx
